--- a/4. Functions/4.3 Lambdas and Recursion/in_class_demo.ipynb
+++ b/4. Functions/4.3 Lambdas and Recursion/in_class_demo.ipynb
@@ -36,33 +36,55 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello world has a length of 11\n"
+      "The string My name is gabe has a lenght of 15\n"
      ]
     }
    ],
    "source": [
-    "#TODO create a lambda function to print out a string and its length\n"
+    "#TODO create a lambda function to print out a string and its length\n",
+    "format = lambda string: print(f\"The string {string} has a lenght of {len(string)}\")\n",
+    "format('My name is gabe')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "larger\n"
+     ]
+    }
+   ],
+   "source": [
+    "#TODO create a lambda function that takes 2 arguments, A and B. If A is larger than B return 'larger'\n",
+    "# If A is smaller than B return 'smaller'\n",
+    "size = lambda a, b: print('larger') if a >= b else print('smaller')\n",
+    "size(3, 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'larger'"
+       "10"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#TODO create a lambda function that takes 2 arguments, A and B. If A is larger than B return 'larger'\n",
-    "# If A is smaller than B return 'smaller'\n"
+    "add = lambda x, y: x + y\n",
+    "add(5, 5)"
    ]
   },
   {
@@ -88,13 +110,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "#TODO Use the function from above to filter a list of numbers\n",
     "from random import randint\n",
+    "def is_odd(num):\n",
+    "    val = num\n",
+    "    for i in range(num, num + num):\n",
+    "        val *= i/2\n",
+    "\n",
+    "    if val % 3 == 0:\n",
+    "        return False\n",
+    "    else: return True\n",
+    "    \n",
     "var = [randint(0, 100) for _ in range(20)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[91, 69, 28, 100, 69, 9, 45, 48, 95, 7, 28]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(filter(is_odd, var))"
    ]
   },
   {
@@ -118,17 +169,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 0, 0, 1, 2, 2, 4, 5, 8, 8, 8, 9, 10]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#TODO use a callback to return a sorted list of values that are equal to or less than 10\n",
-    "var = [8, 17, 23, 2, 16, 21, 10, 4, 1, 20, 9, 18, 14, 12, 5, 16, 0, 17, 0, 8, 0, 2, 13, 15, 8]"
+    "var = [8, 17, 23, 2, 16, 21, 10, 4, 1, 20, 9, 18, 14, 12, 5, 16, 0, 17, 0, 8, 0, 2, 13, 15, 8]\n",
+    "callback = lambda element: element <= 10\n",
+    "sorted(list(filter(callback, var)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -137,14 +201,16 @@
        "['Mystery', 'Annoying', 'Fortnite']"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#TODO use a callback to return elements that are longer than 4 characters and have a capitalized first character\n",
-    "words = [\"hello\", \"eat\", \"fan\", \"Mystery\", \"Help\", \"Pie\", \"Annoying\", \"tedious\", 'party', 'Fortnite']"
+    "words = [\"hello\", \"eat\", \"fan\", \"Mystery\", \"Help\", \"Pie\", \"Annoying\", \"tedious\", 'party', 'Fortnite']\n",
+    "callback = lambda element: len(element) > 4 and element[0].isupper()\n",
+    "list(filter(callback, words))"
    ]
   },
   {
@@ -169,33 +235,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[5, 3, 3, 7, 4, 3, 8, 7, 5, 8]"
+       "[(5, 'hello'),\n",
+       " (3, 'eat'),\n",
+       " (3, 'fan'),\n",
+       " (7, 'Mystery'),\n",
+       " (4, 'Help'),\n",
+       " (3, 'Pie'),\n",
+       " (8, 'Annoying'),\n",
+       " (7, 'tedious'),\n",
+       " (5, 'party'),\n",
+       " (8, 'Fortnite')]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#TODO convert every element in the list to the length of the string\n",
-    "words = [\"hello\", \"eat\", \"fan\", \"Mystery\", \"Help\", \"Pie\", \"Annoying\", \"tedious\", 'party', 'Fortnite']"
+    "words = [\"hello\", \"eat\", \"fan\", \"Mystery\", \"Help\", \"Pie\", \"Annoying\", \"tedious\", 'party', 'Fortnite']\n",
+    "callback = lambda element: len(element)\n",
+    "lengths = list(map(callback, words))\n",
+    "list(zip(lengths, words))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['14', '12', '5', '16', '0', '17', '0', '8', '0', '2', '13', '15', '8']"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Use a lambda to convert each number into a string\n",
-    "var = [14, 12, 5, 16, 0, 17, 0, 8, 0, 2, 13, 15, 8]"
+    "var = [14, 12, 5, 16, 0, 17, 0, 8, 0, 2, 13, 15, 8]\n",
+    "callback = lambda element: str(element)\n",
+    "list(map(callback, var))"
    ]
   },
   {
@@ -227,11 +318,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n",
+      "Doing another recursive call with the next call being 8 * 7\n",
+      "7\n",
+      "Doing another recursive call with the next call being 7 * 6\n",
+      "6\n",
+      "Doing another recursive call with the next call being 6 * 5\n",
+      "5\n",
+      "Doing another recursive call with the next call being 5 * 4\n",
+      "4\n",
+      "Doing another recursive call with the next call being 4 * 3\n",
+      "3\n",
+      "Doing another recursive call with the next call being 3 * 2\n",
+      "2\n",
+      "Doing another recursive call with the next call being 2 * 1\n",
+      "1\n",
+      "Stop condition reached\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "40320"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#TODO Implement the recursive function to calculate factorials"
+    "#TODO Implement the recursive function to calculate factorials\n",
+    "def factorial(num):\n",
+    "    print(num)\n",
+    "    if num == 1:\n",
+    "        print(\"Stop condition reached\")\n",
+    "        return num\n",
+    "    else:\n",
+    "        print(f\"Doing another recursive call with the next call being {num} * {num - 1}\")\n",
+    "        return num * factorial(num - 1)\n",
+    "\n",
+    "factorial(8)      "
    ]
   },
   {
@@ -263,6 +397,11 @@
     "call 1 returns 6 but since this was the original function call, the recursion terminates and the final answer gets returned\n",
     "```"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
