--- a/4. Functions/4.3 Lambdas and Recursion/lambdas_recursion_tasks.ipynb
+++ b/4. Functions/4.3 Lambdas and Recursion/lambdas_recursion_tasks.ipynb
@@ -10,11 +10,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#TODO code goes here"
+    "#TODO code goes here\n",
+    "from random import randint\n",
+    "gen_num = lambda: [randint(0, 500) for _ in range(50)]\n"
    ]
   },
   {
@@ -34,22 +36,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "True"
+       "False"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#TODO code goes here"
+    "#TODO code goes here\n",
+    "def is_prime(num):\n",
+    "    if num <= 1:\n",
+    "        return False\n",
+    "    else:\n",
+    "        for i in range(2, num):\n",
+    "            if num % i == 0:\n",
+    "                return False\n",
+    "        return True\n",
+    "\n",
+    "is_prime(9)\n"
    ]
   },
   {
@@ -62,11 +74,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[360, 148, 482, 145, 170, 41, 459, 361, 111, 125, 356, 400, 307, 289, 342, 238, 41, 349, 367, 466, 356, 134, 319, 65, 261, 37, 236, 393, 381, 483, 29, 217, 352, 120, 222, 282, 198, 220, 328, 270, 288, 147, 91, 223, 32, 285, 389, 310, 42, 453]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[41, 307, 41, 349, 367, 37, 29, 223, 389]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#TODO code goes here"
+    "#TODO code goes here\n",
+    "var = gen_num()\n",
+    "print(var)\n",
+    "list(filter(is_prime, var))"
    ]
   },
   {
@@ -79,12 +112,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['sillyBilly',\n",
+       " 'NUTRITION_FACTS',\n",
+       " 'breeze_baby',\n",
+       " 'SIR_LAMOF',\n",
+       " 'rill0',\n",
+       " 'PPP',\n",
+       " 'FROSTYSIERRA']"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "names = ['sillyBilly', \"nutrition_facts\", \"breeze_baby\", \"sir_lamof\", \"rill0\", \"ppp\", \"frostySierra\"]\n",
-    "\n"
+    "callback = lambda element: element.upper() if len(element) % 3 == 0 else element\n",
+    "list(map(callback, names))"
    ]
   },
   {
@@ -111,9 +162,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[30.4, 38.0, 25.89, 18.0, 25.5]\n",
+      "Filtering out averages that are greater than 21\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[18.0]"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from random import randint\n",
     "def get_list():\n",
@@ -122,7 +192,17 @@
     "        var = [randint(0, 50) for _ in range(randint(1, 15))]\n",
     "        data.append(var)\n",
     "\n",
-    "    return data\n"
+    "    return data\n",
+    "\n",
+    "average = lambda iterable: sum(iterable)/len(iterable)\n",
+    "num = int(input(\"Enter a number: \"))\n",
+    "averages = [round(average(val), 2) for val in get_list()]\n",
+    "print(averages)\n",
+    "print(f\"Filtering out averages that are greater than {num}\")\n",
+    "extract = lambda element: element < num\n",
+    "list(filter(extract, averages))\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -152,10 +232,169 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Current file count 1\n",
+      "Current file count 2\n",
+      "Entering another directory {\n",
+      "   \"1\": \"file\",\n",
+      "   \"2\": \"file\",\n",
+      "   \"3\": \"file\",\n",
+      "   \"4\": \"file\",\n",
+      "   \"5\": {\n",
+      "      \"1\": {\n",
+      "         \"1\": \"file\",\n",
+      "         \"2\": \"file\",\n",
+      "         \"3\": \"file\"\n",
+      "      },\n",
+      "      \"2\": \"file\",\n",
+      "      \"3\": \"file\",\n",
+      "      \"4\": {\n",
+      "         \"1\": \"file\",\n",
+      "         \"2\": \"file\",\n",
+      "         \"3\": \"file\",\n",
+      "         \"4\": \"file\"\n",
+      "      }\n",
+      "   },\n",
+      "   \"6\": \"file\",\n",
+      "   \"7\": \"file\",\n",
+      "   \"8\": \"file\",\n",
+      "   \"9\": \"file\",\n",
+      "   \"10\": {\n",
+      "      \"1\": \"file\",\n",
+      "      \"2\": \"file\",\n",
+      "      \"3\": \"file\",\n",
+      "      \"4\": {\n",
+      "         \"1\": \"file\",\n",
+      "         \"2\": \"file\",\n",
+      "         \"3\": \"file\"\n",
+      "      }\n",
+      "   }\n",
+      "} \n",
+      "\n",
+      "Current file count 3\n",
+      "Current file count 4\n",
+      "Current file count 5\n",
+      "Current file count 6\n",
+      "Entering another directory {\n",
+      "   \"1\": {\n",
+      "      \"1\": \"file\",\n",
+      "      \"2\": \"file\",\n",
+      "      \"3\": \"file\"\n",
+      "   },\n",
+      "   \"2\": \"file\",\n",
+      "   \"3\": \"file\",\n",
+      "   \"4\": {\n",
+      "      \"1\": \"file\",\n",
+      "      \"2\": \"file\",\n",
+      "      \"3\": \"file\",\n",
+      "      \"4\": \"file\"\n",
+      "   }\n",
+      "} \n",
+      "\n",
+      "Entering another directory {\n",
+      "   \"1\": \"file\",\n",
+      "   \"2\": \"file\",\n",
+      "   \"3\": \"file\"\n",
+      "} \n",
+      "\n",
+      "Current file count 7\n",
+      "Current file count 8\n",
+      "Current file count 9\n",
+      "Exiting a function call\n",
+      "\n",
+      "Current file count 10\n",
+      "Current file count 11\n",
+      "Entering another directory {\n",
+      "   \"1\": \"file\",\n",
+      "   \"2\": \"file\",\n",
+      "   \"3\": \"file\",\n",
+      "   \"4\": \"file\"\n",
+      "} \n",
+      "\n",
+      "Current file count 12\n",
+      "Current file count 13\n",
+      "Current file count 14\n",
+      "Current file count 15\n",
+      "Exiting a function call\n",
+      "\n",
+      "Exiting a function call\n",
+      "\n",
+      "Current file count 16\n",
+      "Current file count 17\n",
+      "Current file count 18\n",
+      "Current file count 19\n",
+      "Entering another directory {\n",
+      "   \"1\": \"file\",\n",
+      "   \"2\": \"file\",\n",
+      "   \"3\": \"file\",\n",
+      "   \"4\": {\n",
+      "      \"1\": \"file\",\n",
+      "      \"2\": \"file\",\n",
+      "      \"3\": \"file\"\n",
+      "   }\n",
+      "} \n",
+      "\n",
+      "Current file count 20\n",
+      "Current file count 21\n",
+      "Current file count 22\n",
+      "Entering another directory {\n",
+      "   \"1\": \"file\",\n",
+      "   \"2\": \"file\",\n",
+      "   \"3\": \"file\"\n",
+      "} \n",
+      "\n",
+      "Current file count 23\n",
+      "Current file count 24\n",
+      "Current file count 25\n",
+      "Exiting a function call\n",
+      "\n",
+      "Exiting a function call\n",
+      "\n",
+      "Exiting a function call\n",
+      "\n",
+      "Exiting a function call\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "25"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "import json\n",
+    "def count_files(data, file_count = 0, verbose = False):\n",
+    "    for key, value in data.items():\n",
+    "        if value == 'file':\n",
+    "            file_count += 1\n",
+    "            if verbose:\n",
+    "                print(f\"Current file count {file_count}\")\n",
+    "\n",
+    "        elif isinstance(value, dict):\n",
+    "            if verbose:\n",
+    "                print(f\"Entering another directory {json.dumps(value, indent = 3)} \\n\")\n",
+    "            file_count = count_files(value, file_count = file_count, verbose = verbose)\n",
+    "    \n",
+    "    if verbose:\n",
+    "        print(\"Exiting a function call\\n\")\n",
+    "    return file_count\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "data = {\n",
     "    1: 'file',\n",
     "    2: 'file',\n",
@@ -193,8 +432,16 @@
     "    \n",
     "}\n",
     "\n",
-    "#TODO     \n"
+    "#TODO     \n",
+    "count_files(data, verbose = True)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
