--- a/5. Files and Exceptions/5.2 Exceptions/exceptions_tasks.ipynb
+++ b/5. Files and Exceptions/5.2 Exceptions/exceptions_tasks.ipynb
@@ -137,15 +137,22 @@
    "source": [
     "def create_dummy_files():\n",
     "    filenames = [f\"files/file{i}.txt\" for i in range(10) if i % 2 == 0]\n",
-    "    for file in filenames:\n",
-    "        with open(file, 'w') as f:\n",
-    "            f.write(f\"Hello i am file {file}\")\n",
+    "    try:\n",
+    "        for file in filenames:\n",
+    "            with open(file, 'w') as f:\n",
+    "                f.write(f\"Hello i am file {file}\")\n",
+    "    except Exception as e:\n",
+    "        print(e)\n",
+    "\n",
+    "create_dummy_files()\n",
     "\n",
     "def read_dummy_files():\n",
     "    filenames = [f\"files/file{i}.txt\" for i in range(10)]\n",
     "    for file in filenames:\n",
     "        with open(file, 'r') as f:\n",
-    "            f.write(f\"Hello i am file {file}\")\n",
+    "            f.read(f\"Hello i am file {file}\")\n",
+    "\n",
+    "read_dummy_files()\n",
     "\n"
    ]
   }
