--- a/6. Classes and Imports/6.1 Class Basics/classes_tasks.ipynb
+++ b/6. Classes and Imports/6.1 Class Basics/classes_tasks.ipynb
@@ -8,7 +8,7 @@
     "Create a class called user that has the following attributes\n",
     "\n",
     "- username (string)\n",
-    "- follower_type (string)\n",
+    "- follower_type `[secondary, primary]` (string)\n",
     "- private (bool)\n",
     "\n",
     "### Example output\n",
@@ -108,18 +108,13 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "# TASK 4\n",
     "Create a planet class that has the following attributes\n",
-    "- name: the name of the planet\n",
-    "- position (x, y): Randon integer between 0 - 1000 for `x` and 0 - 500 for `y`\n",
-    "- size: a choice of `small, medium, large`\n",
-    "- life: a random boolean that is `True` or `False`\n",
+    "- `name:` the name of the planet\n",
+    "- `position (x, y):` Randon integer between `-1000 - 1000` for `x` and `-500 - 500` for `y`\n",
+    "- `size:` a random choice of `small, medium, large`\n",
+    "- `life:` a random boolean that is `True` or `False`\n",
     "\n",
     "### Example output\n",
     "```python\n",
@@ -188,7 +183,7 @@
     "# TASK 6\n",
     "In your planet class, write a method called `distance` that will be used to calculate the distance between the current planet and another planet using the `position` attribute. \n",
     "\n",
-    "The distance function should take another planet as an argument and will use the distance formula below to calculate the distance in meters. The function should return a single value.\n",
+    "The distance function should take a tuple coordinates `(x, y)` as an argument and will use the distance formula below to calculate the distance in meters. The function should return a single value.\n",
     "\n",
     "### Distance formula\n",
     "$d=\\sqrt{\\left( x_{2}-x_{1}\\right) ^{2}+\\left( y_{2}-y_{1}\\right) ^{2}}$\n",
@@ -198,15 +193,46 @@
     "planet1 = Planet('Planet1')\n",
     "planet2 = Planet('Planet2')\n",
     "\n",
-    "planet1.distance(planet2) -> 34.8\n",
+    "planet1.distance(planet2.position) -> 34.8\n",
     "\n",
-    "\"Planet1 is 34.8 miles away from planet2\"\n",
+    "\"Planet1 is 34.8 miles away from Planet2\"\n",
     "```"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#TODO\n",
+    "from math import sqrt # use this to calculate the square root of a value"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# TASK 7\n",
+    "Write a class method called `move_planet` that will move the planet to a new position. If new coordinates aren't given, have the planet move to a random position, if coordinates are given (as an argument to the function) move the planet to those coordinates. Then print out the new position and calculate the distance the planet has moved from its previous position.\n",
+    "\n",
+    "***By default, the `coordinate` argument should be set to `None`*** \n",
+    "\n",
+    "### Example output\n",
+    "```python \n",
+    "planet = Planet('new_planet')\n",
+    "planet.position -> (532, 177)\n",
+    "\n",
+    "# move to specific location\n",
+    "planet.move_planet(coordinates = (333, 125)) -> f\"The planet has moved {distance} miles from the previous position of {previous_position}\"\n",
+    "\n",
+    "# move to a random location\n",
+    "planet.move_planet() -> f\"The planet has moved {distance} miles from the previous position of {previous_position}\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,13 +243,43 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# TASK 7\n",
-    "Write a function that will count how many planets have life.\n",
+    "# TASK 8\n",
+    "Create three new attibutes and one method\n",
+    "\n",
+    "- `trips`: A list that keeps track of the distance the planet has moved every time the planet moves\n",
+    "- `distance_traveled`: A value that tells you to total distance the planet has traveled\n",
+    "- `trip_count`: A value that is equal to the amount of times the planet has moved\n",
+    "- `status()`: A function that will print out the status of the planet such as:\n",
+    "    - The number of trips the planet has made\n",
+    "    - The total distance traveled\n",
+    "    - The average distance traveled\n",
+    "    - The longest trip (trip with the highest distance)\n",
+    "\n",
+    "\n",
+    "Each time the `move_planet` function is called, all three of these attributes should be updated.\n",
     "\n",
     "### Example output\n",
-    "```python \n",
-    "planets = [list_of_planets]\n",
-    "count_life(planets) -> \"10 planets have life on them\"\n",
+    "```python\n",
+    "planet = Planet('new_planet')\n",
+    "planet.position -> (532, 177)\n",
+    "\n",
+    "# move to random location\n",
+    "planet.move_planet() -> \"The planet has moved 14 miles from the previous position of (532, 177)\"\n",
+    "\n",
+    "# get the planet info\n",
+    "planet.status()\n",
+    "# \"The planet has made 1 trip\"\n",
+    "# \"The total distance traveled is 14 miles\"\n",
+    "# \"The average distance traveled is 14 miles\"\n",
+    "# \"The longest trip was 14 miles\"\n",
+    "\n",
+    "# move to random location\n",
+    "planet.move_planet() -> \"The planet has moved 53 miles from the previous position of (511, 17)\"\n",
+    "planet.status()\n",
+    "# \"The planet has made 2 trips\"\n",
+    "# \"The total distance traveled is 67 miles\"\n",
+    "# \"The average distance traveled is 33.5 miles\"\n",
+    "# \"The longest trip was 53 miles\"\n",
     "```"
    ]
   },
@@ -232,9 +288,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#TODO"
-   ]
+   "source": []
   }
  ],
  "metadata": {
