--- a/6. Classes and Imports/6.1 Class Basics/in_class_demo.ipynb
+++ b/6. Classes and Imports/6.1 Class Basics/in_class_demo.ipynb
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,10 +179,19 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#TODO: add an attribute called `traveled` that will be a single value that is updated every time the car either moves forward or backwards"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Creating a list of objects"
+    "# Classes and other Data structures"
    ]
   },
   {
