--- a/6. Classes and Imports/6.1 Class Basics/in_class_demo.ipynb
+++ b/6. Classes and Imports/6.1 Class Basics/in_class_demo.ipynb
@@ -31,13 +31,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create a vehicle class\n",
     "class Vehicle:\n",
-    "    pass\n"
+    "    pass"
    ]
   },
   {
@@ -56,11 +56,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#TODO Create an instance of the vehicle class"
+    "#TODO Create an instance of the vehicle class\n",
+    "tesla = Vehicle()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('black', 'Blue')"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class Vehicle:\n",
+    "\n",
+    "    def __init__(self, color):\n",
+    "        self.color = color\n",
+    "\n",
+    "tesla = Vehicle('black')\n",
+    "ford = Vehicle('Blue')\n",
+    "\n",
+    "tesla.color, ford.color"
    ]
   },
   {
@@ -103,11 +132,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('tesla', 'red', 'electric')"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#TODO create a constructor for the vehicle class with the attributes 'name' and 'engine_type'"
+    "#TODO create a constructor for the vehicle class with the attributes 'name' and 'engine_type'\n",
+    "class Vehicle: \n",
+    "\n",
+    "    def __init__(self, name, color, engine_type):\n",
+    "        self.name = name\n",
+    "        self.color = color\n",
+    "        self.engine_type = engine_type\n",
+    "\n",
+    "tesla = Vehicle('tesla', 'red', 'electric')\n",
+    "tesla.name, tesla.color, tesla.engine_type"
    ]
   },
   {
@@ -133,11 +182,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#TODO add the attributes for year, color, and a boolean representing if the car was used or not"
+    "#TODO add the attributes for year, color, and a boolean representing if the car was used or not\n",
+    "from random import randint, choice\n",
+    "\n",
+    "class Vehicle: \n",
+    "\n",
+    "    def __init__(self, name, color, engine_type):\n",
+    "        self.name = name\n",
+    "        self.color = color\n",
+    "        self.engine_type = engine_type\n",
+    "        self.used = choice([True, False])\n",
+    "\n",
+    "tesla = Vehicle(\"tesla\", 'blue', 'E')\n",
+    "tesla.used"
    ]
   },
   {
@@ -145,7 +217,7 @@
    "metadata": {},
    "source": [
     "# Methods\n",
-    "If an attribute is a variable that determines the current state of the object, then methods or functions that can change the state of the object. You write methods for your class the same way you would write a normal function, the only difference  is that the first argument when defining it needs to be `self`.\n",
+    "If an attribute is a variable that determines the current state of the object, then methods are functions that can change the state of the object. You write methods for your class the same way you would write a normal function, the only difference  is that the first argument when defining it needs to be `self`.\n",
     "\n",
     "```python\n",
     "class Vehicle:\n",
@@ -168,23 +240,166 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "honk, honk, honk, honk\n"
+     ]
+    }
+   ],
    "source": [
-    "#TODO: lets add a position (x, y) attribute to our class that will determine where our `Vehicle` is located, \n",
-    "# then write a move horizontal function that will change the position of our x coordinate,\n",
-    "# then write a move vertical function that will change our y coordinate.\n",
-    "# print out the new position every time the car is moved"
+    "class Vehicle:\n",
+    "\n",
+    "    def __init__(self, name, engine_type):\n",
+    "        self.name = name\n",
+    "        self.engine_type = engine_type\n",
+    "        self.year = randint(2012, 2021)\n",
+    "\n",
+    "    def go_vroom(self, times):\n",
+    "        vroom = \", \".join([\"Vroom\" for _ in range(times)])\n",
+    "        print(vroom)\n",
+    "    \n",
+    "    def honk(self, times):\n",
+    "        honk = \", \".join([\"honk\" for _ in range(times)])\n",
+    "        print(honk)\n",
+    "\n",
+    "car = Vehicle('myCar', 'E')\n",
+    "car.honk(4)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-5, 3]\n",
+      "The car has moved forward to the new position: [0, 3]\n",
+      "The car has moved backwards to the new position: [-5, 3]\n",
+      "The car has moved up to the new position: [-5, 8]\n"
+     ]
+    }
+   ],
    "source": [
-    "#TODO: add an attribute called `traveled` that will be a single value that is updated every time the car either moves forward or backwards"
+    "#TODO: lets add a position (x, y) attribute to our class that will determine where our `Vehicle` is located, \n",
+    "# then write a move horizontal function that will change the position of our x coordinate,\n",
+    "# then write a move vertical function that will change our y coordinate.\n",
+    "# print out the new position every time the car is moved\n",
+    "class Vehicle: \n",
+    "\n",
+    "    def __init__(self, name, color, engine_type):\n",
+    "        self.name = name\n",
+    "        self.color = color\n",
+    "        self.engine_type = engine_type\n",
+    "        self.used = choice([True, False])\n",
+    "        self.position = [randint(-10, 10), randint(-10, 10)]\n",
+    "    \n",
+    "    def move(self, direction):\n",
+    "        '''\n",
+    "            This method will take in a direction (forward, backwards, up, or down) and move the car 5 units in that direction\n",
+    "        '''\n",
+    "\n",
+    "        if direction.lower() == 'forward':\n",
+    "            self.position[0] = self.position[0] + 5\n",
+    "        elif direction.lower() == 'backwards':\n",
+    "            self.position[0] -= 5\n",
+    "        elif direction.lower() == 'up':\n",
+    "            self.position[-1] += 5\n",
+    "        elif direction.lower() == 'down':\n",
+    "            self.position[-1] -= 5\n",
+    "\n",
+    "        print(f\"The car has moved {direction} to the new position: {self.position}\")\n",
+    "\n",
+    "\n",
+    "\n",
+    "tesla = Vehicle('Tesla', 'black', \"E\")\n",
+    "print(tesla.position)\n",
+    "tesla.move('forward')\n",
+    "# print(tesla.position)\n",
+    "tesla.move('backwards')\n",
+    "# print(tesla.position)\n",
+    "tesla.move('up')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3, -1]\n",
+      "The car has moved forward to the new position: [8, -1]\n",
+      "The car has made 1 moves\n",
+      "The car has moved backwards to the new position: [3, -1]\n",
+      "The car has moved up to the new position: [3, 4]\n",
+      "The car has made 3 moves\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['forward', 'backwards', 'up']"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#TODO: add an attribute called `traveled` that will be a single value that is updated every time the car either moves forward or backwards\n",
+    "class Vehicle: \n",
+    "\n",
+    "    def __init__(self, name, color, engine_type):\n",
+    "        self.name = name\n",
+    "        self.color = color\n",
+    "        self.engine_type = engine_type\n",
+    "        self.used = choice([True, False])\n",
+    "        self.position = [randint(-10, 10), randint(-10, 10)]\n",
+    "        self.traveled = 0\n",
+    "        self.moves = []\n",
+    "    \n",
+    "    def move(self, direction):\n",
+    "        '''\n",
+    "            This method will take in a direction (forward, backwards, up, or down) and move the car 5 units in that direction\n",
+    "        '''\n",
+    "\n",
+    "        if direction.lower() == 'forward':\n",
+    "            self.position[0] = self.position[0] + 5\n",
+    "\n",
+    "        elif direction.lower() == 'backwards':\n",
+    "            self.position[0] -= 5\n",
+    "\n",
+    "        elif direction.lower() == 'up':\n",
+    "            self.position[-1] += 5\n",
+    "\n",
+    "        elif direction.lower() == 'down':\n",
+    "            self.position[-1] -= 5\n",
+    "\n",
+    "        print(f\"The car has moved {direction} to the new position: {self.position}\")\n",
+    "        self.traveled += 1\n",
+    "        self.moves.append(direction.lower())\n",
+    "\n",
+    "tesla = Vehicle('Tesla', 'black', \"E\")\n",
+    "print(tesla.position)\n",
+    "tesla.move('forward')\n",
+    "print(f\"The car has made {tesla.traveled} moves\")\n",
+    "# print(tesla.position)\n",
+    "tesla.move('backwards')\n",
+    "# print(tesla.position)\n",
+    "tesla.move('up')\n",
+    "print(f\"The car has made {tesla.traveled} moves\")\n",
+    "tesla.moves"
    ]
   },
   {
@@ -196,11 +411,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "red car_0\n",
+      "black car_1\n",
+      "black car_2\n",
+      "blue car_3\n",
+      "black car_4\n",
+      "red car_5\n",
+      "black car_6\n",
+      "black car_7\n",
+      "blue car_8\n",
+      "red car_9\n"
+     ]
+    }
+   ],
    "source": [
-    "#TODO Generate a list 10 of cars "
+    "#TODO Generate a list 10 of cars \n",
+    "cars = [Vehicle(f\"car_{number}\", f\"{choice(['black', 'blue', 'red'])}\", f\"{choice(['Electric', 'Gasoline'])}\") for number in range(10)]\n",
+    "for car in cars:\n",
+    "    print(car.color, car.name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "black car_1\n",
+      "black car_2\n",
+      "black car_4\n",
+      "black car_6\n",
+      "black car_7\n",
+      "blue car_3\n",
+      "blue car_8\n",
+      "red car_0\n",
+      "red car_5\n",
+      "red car_9\n"
+     ]
+    }
+   ],
+   "source": [
+    "cars.sort(key = lambda car: car.color)\n",
+    "for car in cars:\n",
+    "    print(car.color, car.name)"
    ]
   },
   {
@@ -214,12 +477,38 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "car_1 [2, 10] False\n",
+      "car_2 [-9, 7] False\n",
+      "car_4 [-3, 1] False\n",
+      "car_6 [1, 6] True\n",
+      "car_7 [9, -8] False\n",
+      "car_3 [-4, -7] True\n",
+      "car_8 [-7, 10] False\n",
+      "car_0 [-4, 7] True\n",
+      "car_5 [7, -4] False\n",
+      "car_9 [-7, 5] True\n"
+     ]
+    }
+   ],
+   "source": [
+    "# print out each cars name and the year\n",
+    "for car in cars:\n",
+    "    print(car.name, car.position, car.used)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# print out each cars name and the year"
-   ]
+   "source": []
   }
  ],
  "metadata": {
