--- a/6. Classes and Imports/6.1 Class Basics/in_class_demo.ipynb
+++ b/6. Classes and Imports/6.1 Class Basics/in_class_demo.ipynb
@@ -147,16 +147,7 @@
     }
    ],
    "source": [
-    "#TODO create a constructor for the vehicle class with the attributes 'name' and 'engine_type'\n",
-    "class Vehicle: \n",
-    "\n",
-    "    def __init__(self, name, color, engine_type):\n",
-    "        self.name = name\n",
-    "        self.color = color\n",
-    "        self.engine_type = engine_type\n",
-    "\n",
-    "tesla = Vehicle('tesla', 'red', 'electric')\n",
-    "tesla.name, tesla.color, tesla.engine_type"
+    "#TODO create a constructor for the vehicle class with the attributes 'name' and 'engine_type'\n"
    ]
   },
   {
@@ -198,18 +189,7 @@
    ],
    "source": [
     "#TODO add the attributes for year, color, and a boolean representing if the car was used or not\n",
-    "from random import randint, choice\n",
-    "\n",
-    "class Vehicle: \n",
-    "\n",
-    "    def __init__(self, name, color, engine_type):\n",
-    "        self.name = name\n",
-    "        self.color = color\n",
-    "        self.engine_type = engine_type\n",
-    "        self.used = choice([True, False])\n",
-    "\n",
-    "tesla = Vehicle(\"tesla\", 'blue', 'E')\n",
-    "tesla.used"
+    "from random import randint, choice\n"
    ]
   },
   {
@@ -240,17 +220,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "honk, honk, honk, honk\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class Vehicle:\n",
     "\n",
@@ -266,140 +238,30 @@
     "    def honk(self, times):\n",
     "        honk = \", \".join([\"honk\" for _ in range(times)])\n",
     "        print(honk)\n",
-    "\n",
-    "car = Vehicle('myCar', 'E')\n",
-    "car.honk(4)"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[-5, 3]\n",
-      "The car has moved forward to the new position: [0, 3]\n",
-      "The car has moved backwards to the new position: [-5, 3]\n",
-      "The car has moved up to the new position: [-5, 8]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#TODO: lets add a position (x, y) attribute to our class that will determine where our `Vehicle` is located, \n",
     "# then write a move horizontal function that will change the position of our x coordinate,\n",
     "# then write a move vertical function that will change our y coordinate.\n",
     "# print out the new position every time the car is moved\n",
-    "class Vehicle: \n",
     "\n",
-    "    def __init__(self, name, color, engine_type):\n",
-    "        self.name = name\n",
-    "        self.color = color\n",
-    "        self.engine_type = engine_type\n",
-    "        self.used = choice([True, False])\n",
-    "        self.position = [randint(-10, 10), randint(-10, 10)]\n",
-    "    \n",
-    "    def move(self, direction):\n",
-    "        '''\n",
-    "            This method will take in a direction (forward, backwards, up, or down) and move the car 5 units in that direction\n",
-    "        '''\n",
-    "\n",
-    "        if direction.lower() == 'forward':\n",
-    "            self.position[0] = self.position[0] + 5\n",
-    "        elif direction.lower() == 'backwards':\n",
-    "            self.position[0] -= 5\n",
-    "        elif direction.lower() == 'up':\n",
-    "            self.position[-1] += 5\n",
-    "        elif direction.lower() == 'down':\n",
-    "            self.position[-1] -= 5\n",
-    "\n",
-    "        print(f\"The car has moved {direction} to the new position: {self.position}\")\n",
-    "\n",
-    "\n",
-    "\n",
-    "tesla = Vehicle('Tesla', 'black', \"E\")\n",
-    "print(tesla.position)\n",
-    "tesla.move('forward')\n",
-    "# print(tesla.position)\n",
-    "tesla.move('backwards')\n",
-    "# print(tesla.position)\n",
-    "tesla.move('up')"
+    "     "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[3, -1]\n",
-      "The car has moved forward to the new position: [8, -1]\n",
-      "The car has made 1 moves\n",
-      "The car has moved backwards to the new position: [3, -1]\n",
-      "The car has moved up to the new position: [3, 4]\n",
-      "The car has made 3 moves\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "['forward', 'backwards', 'up']"
-      ]
-     },
-     "execution_count": 51,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#TODO: add an attribute called `traveled` that will be a single value that is updated every time the car either moves forward or backwards\n",
-    "class Vehicle: \n",
-    "\n",
-    "    def __init__(self, name, color, engine_type):\n",
-    "        self.name = name\n",
-    "        self.color = color\n",
-    "        self.engine_type = engine_type\n",
-    "        self.used = choice([True, False])\n",
-    "        self.position = [randint(-10, 10), randint(-10, 10)]\n",
-    "        self.traveled = 0\n",
-    "        self.moves = []\n",
-    "    \n",
-    "    def move(self, direction):\n",
-    "        '''\n",
-    "            This method will take in a direction (forward, backwards, up, or down) and move the car 5 units in that direction\n",
-    "        '''\n",
-    "\n",
-    "        if direction.lower() == 'forward':\n",
-    "            self.position[0] = self.position[0] + 5\n",
-    "\n",
-    "        elif direction.lower() == 'backwards':\n",
-    "            self.position[0] -= 5\n",
-    "\n",
-    "        elif direction.lower() == 'up':\n",
-    "            self.position[-1] += 5\n",
-    "\n",
-    "        elif direction.lower() == 'down':\n",
-    "            self.position[-1] -= 5\n",
-    "\n",
-    "        print(f\"The car has moved {direction} to the new position: {self.position}\")\n",
-    "        self.traveled += 1\n",
-    "        self.moves.append(direction.lower())\n",
-    "\n",
-    "tesla = Vehicle('Tesla', 'black', \"E\")\n",
-    "print(tesla.position)\n",
-    "tesla.move('forward')\n",
-    "print(f\"The car has made {tesla.traveled} moves\")\n",
-    "# print(tesla.position)\n",
-    "tesla.move('backwards')\n",
-    "# print(tesla.position)\n",
-    "tesla.move('up')\n",
-    "print(f\"The car has made {tesla.traveled} moves\")\n",
-    "tesla.moves"
+    "#TODO: add an attribute called `traveled` that will be a single value that is updated every time the car either moves forward or backwards\n"
    ]
   },
   {
@@ -411,60 +273,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "red car_0\n",
-      "black car_1\n",
-      "black car_2\n",
-      "blue car_3\n",
-      "black car_4\n",
-      "red car_5\n",
-      "black car_6\n",
-      "black car_7\n",
-      "blue car_8\n",
-      "red car_9\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#TODO Generate a list 10 of cars \n",
-    "cars = [Vehicle(f\"car_{number}\", f\"{choice(['black', 'blue', 'red'])}\", f\"{choice(['Electric', 'Gasoline'])}\") for number in range(10)]\n",
-    "for car in cars:\n",
-    "    print(car.color, car.name)"
+    "#TODO Generate a list 10 of cars \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "black car_1\n",
-      "black car_2\n",
-      "black car_4\n",
-      "black car_6\n",
-      "black car_7\n",
-      "blue car_3\n",
-      "blue car_8\n",
-      "red car_0\n",
-      "red car_5\n",
-      "red car_9\n"
-     ]
-    }
-   ],
-   "source": [
-    "cars.sort(key = lambda car: car.color)\n",
-    "for car in cars:\n",
-    "    print(car.color, car.name)"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -477,30 +298,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "car_1 [2, 10] False\n",
-      "car_2 [-9, 7] False\n",
-      "car_4 [-3, 1] False\n",
-      "car_6 [1, 6] True\n",
-      "car_7 [9, -8] False\n",
-      "car_3 [-4, -7] True\n",
-      "car_8 [-7, 10] False\n",
-      "car_0 [-4, 7] True\n",
-      "car_5 [7, -4] False\n",
-      "car_9 [-7, 5] True\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# print out each cars name and the year\n",
-    "for car in cars:\n",
-    "    print(car.name, car.position, car.used)"
+    "# print out each cars name and the year\n"
    ]
   },
   {
