--- a/6. Classes and Imports/projects/bank_accounts.ipynb
+++ b/6. Classes and Imports/projects/bank_accounts.ipynb
@@ -9,12 +9,13 @@
     "\n",
     "The login function should be called inside of the class constructor after the username and password has been provided.\n",
     "```python\n",
-    "class User:\n",
+    "class Account:\n",
     "    def __init__(self, username, password):\n",
     "        self.username = username\n",
     "        self.password = password\n",
     "        self.login(username, password)\n",
     "\n",
+    "    # this code is not complete and you will have to finish it\n",
     "    def login(self, username, password):\n",
     "        # if the file exists\n",
     "            # load the file content and set attributes\n",
@@ -39,7 +40,7 @@
     "\n",
     "\n",
     "```python\n",
-    "class User:\n",
+    "class Account:\n",
     "    #TODO account code\n",
     "    def __init__(self, username, password):\n",
     "        self.username = username\n",
@@ -103,7 +104,27 @@
     "    * `username`: used to locate the file\n",
     "    * `password`: Used to log the user into the account\n",
     "* `delete account`: allows the user to delete an account\n",
-    "* `delete user`: allows the user to delete themselves from the bank. This should also delete the file associated with this user and log the user out. see how to delete files [here](https://www.w3schools.com/python/python_file_remove.asp)\n"
+    "* `delete user`: allows the user to delete themselves from the bank. This should also delete the file associated with this user and log the user out. see how to delete files [here](https://www.w3schools.com/python/python_file_remove.asp)\n",
+    "\n",
+    "\n",
+    "# IMPORTANT\n",
+    "This class object should only handle the flow of data, it should not handle user input or anything else like that. This means that any input you need from the user should be given outside of the object and the information is passed to the object as arguments to functions. \n",
+    "\n",
+    "### For example\n",
+    "If a user wants to deposit some money, it should be done like this.\n",
+    "```python\n",
+    "# login to account\n",
+    "gabe = Account('gabeflomo', 'password')\n",
+    "\n",
+    "ans = input(\"What transaction would you like to do? \") -> \"deposit\"\n",
+    "\n",
+    "if ans == \"deposit\":\n",
+    "    amount = int(input(\"How much would you like to deposit? \")) -> 100\n",
+    "    account = input(\"Which account would you like to deposit into? \") -> \"Checkings\"\n",
+    "\n",
+    "    # this will deposit $100 into the checkings account\n",
+    "    gabe.deposit(amount, account)\n",
+    "```"
    ]
   },
   {
